tests/specs/ecosystem/std/dotenv/0_209_0.test
std/dotenv/0.209.0
-- deno.lock --
{}
===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /stringify.ts:15:17
   | 
15 | export function stringify(object: Record<string, string>) {
   |                 ^^^^^^^^^ this function is missing an explicit return type
   | 
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


